--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  #Нужные библиотеки
+  dartz: ^0.10.0
+  equatable: ^2.0.3 
+  flutter_bloc: ^7.3.0
+  dio: ^4.0.0
+  get_it: ^7.2.0
+  internet_connection_checker: ^0.0.1+2
+  flutter_screenutil: ^5.0.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
