--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get_it: ^7.2.0
   internet_connection_checker: ^0.0.1+2
   flutter_screenutil: ^5.0.0+2
+  shared_preferences: ^2.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
